--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Frontend
+name: Deploy or Build Frontend
 on:
   push:
     branches:
@@ -18,6 +18,7 @@ jobs:
       - run: docker run -e CI=true cygnetops/react-test npm test
  
       - name: Generate deployment package
+        if: github.event_name == 'push'
         run: zip -r deploy.zip . -x '*.git*'
  
       - name: Deploy to EB
